--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "idb-kv-store": "^4.5.0",
+    "js-file-download": "^0.4.12",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
