--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "test": "mocha -r chai -r esm -r ts-node/register 'test/**/*.[jt]s'"
   },
   "main": "background.js",
   "dependencies": {
@@ -22,8 +23,10 @@
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.14",
     "@types/crypto-js": "^4.0.1",
     "@types/electron-devtools-installer": "^2.2.0",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.19",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
@@ -34,10 +37,14 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
+    "chai": "^4.2.0",
     "electron": "^11.1.1",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "esm": "^3.2.25",
+    "mocha": "^8.2.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
     "vue-template-compiler": "^2.6.11"
