Added missing dependencies

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "idb-kv-store": "^4.5.0",
     "js-file-download": "^0.4.12",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "xdg-basedir": "^4.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
@@ -28,6 +29,7 @@
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.19",
+    "@types/xdg-basedir": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "@vue/cli-plugin-babel": "~4.5.0",
