--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/codemirror": "0.0.106",
     "@types/crypto-js": "^4.0.1",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/mocha": "^8.2.0",
