--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whide",
-  "version": "0.1.0",
+  "version": "0.6.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -15,6 +15,7 @@
   "main": "background.js",
   "dependencies": {
     "codemirror": "^5.59.0",
+    "commander": "^7.0.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "idb-kv-store": "^4.5.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/codemirror": "0.0.106",
+    "@types/commander": "^2.12.2",
     "@types/crypto-js": "^4.0.1",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/mocha": "^8.2.0",
