--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.19",
     "@types/xdg-basedir": "^4.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.11.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -65,8 +65,13 @@
     "parserOptions": {
       "parser": "@typescript-eslint/parser"
     },
+    "plugins": [
+      "@typescript-eslint"
+    ],
     "rules": {
-      "prefer-const": 0
+      "prefer-const": 0,
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": ["error"]
     }
   },
   "browserslist": [
