--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whide",
-  "version": "0.6.0",
+  "version": "0.9.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,6 +10,7 @@
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
+    "release": "standard-version",
     "test": "mocha -r chai -r esm -r ts-node/register 'test/**/*.[jt]s'"
   },
   "main": "background.js",
@@ -24,6 +25,8 @@
     "xdg-basedir": "^4.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@types/chai": "^4.2.14",
     "@types/codemirror": "0.0.106",
     "@types/commander": "^2.12.2",
@@ -46,7 +49,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "esm": "^3.2.25",
+    "husky": "^4.3.8",
     "mocha": "^8.2.1",
+    "standard-version": "^9.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
@@ -71,12 +76,24 @@
     "rules": {
       "prefer-const": 0,
       "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": ["error"]
+      "@typescript-eslint/no-unused-vars": [
+        "error"
+      ]
     }
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  }
 }
