--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "husky install && electron-builder install-app-deps",
+    "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "release": "standard-version",
     "test": "mocha -r chai -r esm -r ts-node/register 'test/**/*.[jt]s'"
@@ -49,7 +49,6 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "esm": "^3.2.25",
-    "husky": "^4.3.8",
     "mocha": "^8.2.1",
     "standard-version": "^9.1.0",
     "ts-node": "^9.1.1",
@@ -85,15 +84,5 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ],
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  }
+  ]
 }
