--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
+    "postinstall": "node ./pluginInstall.js && electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "release": "standard-version",
     "test": "mocha -r chai -r esm -r ts-node/register 'test/**/*.[jt]s'"
