--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.0.0",
     "idb-kv-store": "^4.5.0",
     "js-file-download": "^0.4.12",
+    "tape": "^5.1.1",
     "vue": "^2.6.11",
     "xdg-basedir": "^4.0.0"
   },
