--- a/config/hwhile-run/package.json
+++ b/config/hwhile-run/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hwhile-run",
+  "name": "@whide/hwhile-run",
   "type": "module",
   "version": "1.0.0",
   "description": "Run/debug plugin for the Whide editor, using the HWhile interpreter",
@@ -10,7 +10,7 @@
   "author": "Alaric Whitehead",
   "license": "MIT",
   "dependencies": {
-    "hwhile-wrapper": "^1.2.1",
+    "@whide/hwhile-wrapper": "^1.3.0",
     "tmp": "^0.2.1"
   }
 }
