--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "codemirror": "^5.59.0",
     "commander": "^7.0.0",
     "core-js": "^3.6.5",
