--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "commander": "^7.0.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
+    "filer": "^1.2.0",
     "idb-kv-store": "^4.5.0",
     "js-file-download": "^0.4.12",
     "tape": "^5.1.1",
@@ -59,7 +60,8 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.46.0"
   },
   "eslintConfig": {
     "root": true,
