--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.19",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "^4.5.9",
@@ -54,7 +54,8 @@
     "mocha": "^8.2.1",
     "standard-version": "^9.1.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.2",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.46.0"
