--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "js-file-download": "^0.4.12",
     "tape": "^5.1.1",
     "vue": "^2.6.11",
+    "vue-router": "^3.5.1",
     "vuedraggable": "^2.24.3",
     "xdg-basedir": "^4.0.0"
   },
