--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@whide/hwhile-wrapper": "^1.4.0",
     "codemirror": "^5.59.0",
     "commander": "^7.0.0",
     "core-js": "^3.6.5",
