--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
-    "@types/codemirror": "0.0.106",
+    "@types/codemirror": "0.0.108",
     "@types/commander": "^2.12.2",
     "@types/crypto-js": "^4.0.1",
     "@types/electron-devtools-installer": "^2.2.0",
@@ -46,6 +46,7 @@
     "@vue/cli-plugin-typescript": "^4.5.9",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-typescript": "^5.0.2",
+    "@whide/whide-types": "^1.0.1",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "electron": "^11.1.1",
