--- a/config/converter-plugin/package.json
+++ b/config/converter-plugin/package.json
@@ -10,5 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "@whide/hwhile-wrapper": "^1.4.0"
+  },
+  "devDependencies": {
+    "@whide/whide-types": "^1.0.1"
   }
 }
