--- a/config/file-operations/package.json
+++ b/config/file-operations/package.json
@@ -8,5 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alaric Whitehead",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@whide/whide-types": "^1.0.1"
+  }
 }
