--- a/config/hwhile-run/package.json
+++ b/config/hwhile-run/package.json
@@ -11,5 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "@whide/hwhile-wrapper": "^1.4.0"
+  },
+  "devDependencies": {
+    "@whide/whide-types": "^1.0.1"
   }
 }
