feat: added support for debugging programs feat: changed run/debug to use the currently open file instead of getting the user to pick one feat: added a variable viewer to the output panel feat: added a "stream closed" message when program execution ends

--- a/config/hwhile-run/package.json
+++ b/config/hwhile-run/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@whide/hwhile-run",
-  "type": "module",
   "version": "1.0.0",
   "description": "Run/debug plugin for the Whide editor, using the HWhile interpreter",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alaric Whitehead",
   "license": "MIT",
   "dependencies": {
-    "@whide/hwhile-wrapper": "^1.4.0"
+    "@whide/hwhile-wrapper": "^1.5.3"
   }
 }
