--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@whide/whide",
+  "name": "whide",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -39,10 +39,11 @@
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.19",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "^4.5.9",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-typescript": "^5.0.2",
