feat: changed to using memfs instead of filer

--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "commander": "^7.0.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
-    "filer": "^1.2.0",
     "js-file-download": "^0.4.12",
+    "memfs": "^3.2.0",
     "tape": "^5.1.1",
+    "unionfs": "^4.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuedraggable": "^2.24.3",
@@ -47,7 +48,7 @@
     "@vue/cli-plugin-typescript": "^4.5.9",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "@whide/whide-types": "^1.2.0",
+    "@whide/whide-types": "file:../whide-types",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "electron": "^11.1.1",
