--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "js-file-download": "^0.4.12",
+    "localforage": "^1.9.0",
     "memfs": "^3.2.0",
     "tape": "^5.1.1",
     "unionfs": "^4.4.0",
