--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "whide",
   "version": "1.1.2",
   "private": true,
+  "author": {
+    "name": "Alaric Whitehead",
+    "email": "aw548@sussex.ac.uk"
+  },
+  "description": "An IDE for the WHILE language",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
