--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "commander": "^7.0.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
+    "d3": "^6.6.0",
     "js-file-download": "^0.4.12",
     "localforage": "^1.9.0",
     "memfs": "^3.2.0",
@@ -43,6 +44,7 @@
     "@types/codemirror": "0.0.108",
     "@types/commander": "^2.12.2",
     "@types/crypto-js": "^4.0.1",
+    "@types/d3": "^6.3.0",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.19",
