--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@vue/cli-plugin-typescript": "^4.5.9",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "@whide/whide-types": "file:../whide-types",
+    "@whide/whide-types": "^1.3.1",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "electron": "^11.1.1",
