--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "memfs": "^3.2.0",
     "tape": "^5.1.1",
     "unionfs": "^4.4.0",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuedraggable": "^2.24.3",
