--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@whide/hwhile-wrapper": "^1.5.3",
+    "@whide/tree-lang": "file:../treeLang/",
     "codemirror": "^5.59.0",
     "commander": "^7.0.0",
     "core-js": "^3.6.5",
@@ -57,7 +58,7 @@
     "@vue/cli-plugin-typescript": "^4.5.9",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "@whide/whide-types": "^1.3.1",
+    "@whide/whide-types": "file:../whide-types",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "electron": "^11.1.1",
