--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "codemirror": "^5.59.0",
     "commander": "^7.0.0",
     "core-js": "^3.6.5",
-    "crypto-js": "^4.0.0",
     "d3": "^6.6.0",
     "js-file-download": "^0.4.12",
     "localforage": "^1.9.0",
@@ -44,8 +43,6 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/codemirror": "0.0.108",
-    "@types/commander": "^2.12.2",
-    "@types/crypto-js": "^4.0.1",
     "@types/d3": "^6.3.0",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/mocha": "^8.2.0",
@@ -56,7 +53,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "^4.5.9",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.12",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@whide/whide-types": "^1.5.1",
     "babel-eslint": "^10.1.0",
