--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@popperjs/core": "^2.9.2",
     "@whide/hwhile-wrapper": "^1.5.3",
     "@whide/tree-lang": "^1.2.3",
     "codemirror": "^5.59.0",
