--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+*.iml
 
 #Electron-builder output
 /dist_electron
+
+#Internal modules
+types/node_modules
