--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@vue/cli-plugin-typescript": "^4.5.9",
     "@vue/cli-service": "^4.5.12",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "@whide/whide-types": "^1.5.1",
+    "@whide/whide-types": "file:types",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "electron": "^11.1.1",
