--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@popperjs/core": "^2.9.2",
+    "@whide/hwhile-wrapper": "^1.7.1",
     "@whide/tree-lang": "^1.5.3",
     "codemirror": "^5.59.0",
     "commander": "^7.0.0",
