--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   },
   "main": "background.js",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@popperjs/core": "^2.9.2",
     "@whide/hwhile-wrapper": "^1.7.1",
     "@whide/tree-lang": "^1.5.3",
-    "codemirror": "^5.59.0",
+    "codemirror": "^5.62.0",
     "commander": "^7.0.0",
-    "core-js": "^3.6.5",
+    "core-js": "^3.15.2",
     "d3": "^6.6.0",
     "js-file-download": "^0.4.12",
     "localforage": "^1.9.0",
@@ -36,19 +36,20 @@
     "tape": "^5.1.1",
     "unionfs": "^4.4.0",
     "v-tooltip": "^2.1.3",
-    "vue": "^2.6.11",
-    "vue-router": "^3.5.1",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.2",
     "vuedraggable": "^2.24.3",
+    "vuetify": "^2.5.6",
     "whilejs": "^2.1.0",
     "xdg-basedir": "^4.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
-    "@types/codemirror": "0.0.108",
+    "@types/codemirror": "0.0.109",
     "@types/d3": "^6.3.0",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.19",
+    "@types/node": "^14.17.5",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -59,18 +60,21 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
+    "deepmerge": "^4.2.2",
     "electron": "^11.1.1",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "esm": "^3.2.25",
     "mocha": "^8.2.1",
+    "sass": "^1.35.2",
+    "sass-loader": "^12.1.0",
     "standard-version": "^9.1.0",
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
     "typescript": "^4.2.2",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "eslintConfig": {
