--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "js-file-download": "^0.4.12",
     "localforage": "^1.9.0",
     "memfs": "^3.2.0",
+    "sortablejs": "^1.14.0",
     "tape": "^5.1.1",
     "unionfs": "^4.4.0",
     "v-tooltip": "^2.1.3",
@@ -50,6 +51,7 @@
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.17.5",
+    "@types/sortablejs": "^1.10.7",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
