--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "vue-router": "^3.5.2",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.5.6",
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3",
     "whilejs": "^2.1.0",
     "xdg-basedir": "^4.0.0"
   },
