--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   },
   "main": "background.js",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@popperjs/core": "^2.9.2",
     "@whide/hwhile-wrapper": "^1.7.1",
@@ -64,6 +67,7 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
+    "css-loader": "^6.2.0",
     "deepmerge": "^4.2.2",
     "electron": "^11.1.1",
     "electron-devtools-installer": "^3.1.0",
