changed saving to run 5 seconds after last change rather than every 20 seconds

--- a/package.json
+++ b/package.json
@@ -110,6 +110,9 @@
       "@typescript-eslint/no-unused-vars": [
         "error"
       ]
+    },
+    "globals": {
+      "NodeJS": true
     }
   },
   "browserslist": [
