--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vuetify": "^2.5.6",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3",
+    "vuex-shared-mutations": "^1.0.2",
     "whilejs": "^2.2.0",
     "xdg-basedir": "^4.0.0"
   },
