--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@popperjs/core": "^2.9.2",
-    "@whide/hwhile-wrapper": "^1.7.1",
+    "@whide/hwhile-wrapper": "1.8.0",
     "@whide/tree-lang": "^1.5.3",
     "codemirror": "^5.62.0",
     "commander": "^7.0.0",
