--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "downlevelIteration": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "resolveJsonModule": true,
     "types": [
       "node",
       "webpack-env"
