--- a/package.json
+++ b/package.json
@@ -61,11 +61,11 @@
     "@types/sortablejs": "^1.10.7",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "^4.5.9",
-    "@vue/cli-service": "^4.5.13",
+    "@vue/cli-plugin-babel": "~4.5.15",
+    "@vue/cli-plugin-eslint": "~4.5.15",
+    "@vue/cli-plugin-router": "~4.5.15",
+    "@vue/cli-plugin-typescript": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
@@ -73,17 +73,17 @@
     "deepmerge": "^4.2.2",
     "electron": "^11.5.0",
     "electron-devtools-installer": "^3.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "esm": "^3.2.25",
     "mocha": "^8.2.1",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
-    "standard-version": "^9.1.0",
+    "standard-version": "^9.3.2",
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
     "typescript": "^4.2.2",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0",
     "worker-loader": "^3.0.8"
