--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@popperjs/core": "^2.9.2",
+    "@popperjs/core": "^2.11.0",
     "@whide/hwhile-wrapper": "1.8.0",
     "@whide/tree-lang": "^1.5.3",
     "codemirror": "^5.62.0",
@@ -41,6 +41,7 @@
     "sortablejs": "^1.14.0",
     "tape": "^5.1.1",
     "unionfs": "^4.4.0",
+    "uuid": "^8.3.2",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
@@ -60,6 +61,7 @@
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.17.21",
     "@types/sortablejs": "^1.10.7",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.15",
