--- a/package.json
+++ b/package.json
@@ -21,32 +21,32 @@
   "main": "background.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@popperjs/core": "^2.11.0",
+    "@fortawesome/vue-fontawesome": "^2.0.8",
+    "@popperjs/core": "^2.11.5",
     "@whide/hwhile-wrapper": "1.8.0",
     "@whide/tree-lang": "^1.5.3",
-    "codemirror": "^5.62.0",
-    "commander": "^7.0.0",
-    "core-js": "^3.15.2",
-    "d3": "^6.6.0",
-    "flatted": "^3.2.4",
-    "interactjs": "^1.10.11",
+    "codemirror": "^5.65.6",
+    "commander": "^7.2.0",
+    "core-js": "^3.23.3",
+    "d3": "^6.7.0",
+    "flatted": "^3.2.6",
+    "interactjs": "^1.10.14",
     "js-file-download": "^0.4.12",
-    "localforage": "^1.9.0",
-    "memfs": "^3.2.0",
-    "sortablejs": "^1.14.0",
+    "localforage": "^1.10.0",
+    "memfs": "^3.4.7",
+    "sortablejs": "^1.15.0",
     "tape": "^5.1.1",
     "unionfs": "^4.4.0",
     "uuid": "^8.3.2",
     "v-tooltip": "^2.1.3",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.2",
+    "vue": "^2.7.0",
+    "vue-router": "^3.5.4",
     "vuedraggable": "^2.24.3",
-    "vuetify": "^2.5.6",
+    "vuetify": "^2.6.7",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3",
     "vuex-shared-mutations": "^1.0.2",
@@ -54,41 +54,41 @@
     "xdg-basedir": "^4.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.14",
+    "@types/chai": "^4.3.1",
     "@types/codemirror": "0.0.109",
-    "@types/d3": "^6.3.0",
-    "@types/electron-devtools-installer": "^2.2.0",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.17.21",
-    "@types/sortablejs": "^1.10.7",
+    "@types/d3": "^6.7.5",
+    "@types/electron-devtools-installer": "^2.2.2",
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^14.18.21",
+    "@types/sortablejs": "^1.13.0",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-plugin-router": "~4.5.15",
-    "@vue/cli-plugin-typescript": "^4.5.15",
-    "@vue/cli-service": "^4.5.15",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.30.1",
+    "@typescript-eslint/parser": "^5.30.1",
+    "@vue/cli-plugin-babel": "^5.0.6",
+    "@vue/cli-plugin-eslint": "^5.0.6",
+    "@vue/cli-plugin-router": "^5.0.6",
+    "@vue/cli-plugin-typescript": "^5.0.6",
+    "@vue/cli-service": "^5.0.6",
+    "@vue/eslint-config-typescript": "^5.1.0",
     "babel-eslint": "^10.1.0",
-    "chai": "^4.2.0",
-    "css-loader": "^6.2.0",
+    "chai": "^4.3.6",
+    "css-loader": "^6.7.1",
     "deepmerge": "^4.2.2",
-    "electron": "^11.5.0",
-    "electron-devtools-installer": "^3.1.0",
-    "eslint": "^6.8.0",
+    "electron": "^19.0.7",
+    "electron-devtools-installer": "^3.2.0",
+    "eslint": "^7.5.0",
     "eslint-plugin-vue": "^6.2.2",
     "esm": "^3.2.25",
-    "mocha": "^8.2.1",
-    "sass": "^1.35.2",
-    "sass-loader": "^12.1.0",
-    "standard-version": "^9.3.2",
-    "ts-node": "^9.1.1",
-    "tslib": "^2.1.0",
-    "typescript": "^4.2.2",
-    "vue-cli-plugin-electron-builder": "~2.1.1",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0",
+    "mocha": "^10.0.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
+    "standard-version": "^9.5.0",
+    "ts-node": "^10.8.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4",
+    "vue-cli-plugin-electron-builder": "^2.1.1",
+    "vue-template-compiler": "^2.7.0",
+    "webpack": "^5.73.0",
     "worker-loader": "^3.0.8"
   },
   "eslintConfig": {
