--- a/package.json
+++ b/package.json
@@ -62,22 +62,22 @@
     "@types/node": "^14.17.21",
     "@types/sortablejs": "^1.10.7",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.15",
     "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-plugin-typescript": "^4.5.15",
-    "@vue/cli-service": "^4.5.15",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/cli-service": "^4.5.19",
+    "@vue/eslint-config-typescript": "^9.1.0",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "css-loader": "^6.2.0",
     "deepmerge": "^4.2.2",
     "electron": "^11.5.0",
     "electron-devtools-installer": "^3.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^8.19.0",
+    "eslint-plugin-vue": "^8.7.1",
     "esm": "^3.2.25",
     "mocha": "^8.2.1",
     "sass": "^1.35.2",
@@ -88,7 +88,7 @@
     "typescript": "^4.2.2",
     "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0",
+    "webpack": "~5.73.0",
     "worker-loader": "^3.0.8"
   },
   "eslintConfig": {
