--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "whide",
   "version": "2.5.2",
   "private": true,
+  "description": "An IDE for the WHILE language",
   "author": {
     "name": "Alaric Whitehead",
     "email": "aw548@sussex.ac.uk"
   },
-  "description": "An IDE for the WHILE language",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -26,8 +26,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@popperjs/core": "^2.11.0",
-    "@whide/hwhile-wrapper": "1.8.0",
+    "@popperjs/core": "^2.9.2",
+    "@whide/hwhile-wrapper": "^1.8.0",
     "@whide/tree-lang": "^1.5.3",
     "codemirror": "^5.62.0",
     "commander": "^7.0.0",
@@ -36,6 +36,7 @@
     "flatted": "^3.2.4",
     "interactjs": "^1.10.11",
     "js-file-download": "^0.4.12",
+    "loader-utils": "^3.2.0",
     "localforage": "^1.9.0",
     "memfs": "^3.2.0",
     "sortablejs": "^1.14.0",
@@ -55,40 +56,40 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
-    "@types/codemirror": "0.0.109",
+    "@types/codemirror": "^5.60.5",
     "@types/d3": "^6.3.0",
     "@types/electron-devtools-installer": "^2.2.0",
-    "@types/mocha": "^9.1.1",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^14.17.21",
     "@types/sortablejs": "^1.10.7",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
-    "@vue/cli-plugin-babel": "~5.0.6",
-    "@vue/cli-plugin-eslint": "~5.0.6",
-    "@vue/cli-plugin-router": "~5.0.6",
-    "@vue/cli-plugin-typescript": "^5.0.6",
-    "@vue/cli-service": "^5.0.6",
-    "@vue/eslint-config-typescript": "^9.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-eslint": "^4.5.15",
+    "@vue/cli-plugin-router": "^4.5.15",
+    "@vue/cli-plugin-typescript": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
-    "css-loader": "^6.2.0",
+    "css-loader": "^5.2.7",
     "deepmerge": "^4.2.2",
     "electron": "^11.5.0",
     "electron-devtools-installer": "^3.1.0",
-    "eslint": "^8.19.0",
-    "eslint-plugin-vue": "^8.7.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.2",
     "esm": "^3.2.25",
-    "mocha": "^9.1.1",
+    "mocha": "^8.2.1",
     "sass": "^1.35.2",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "^10.3.1",
     "standard-version": "^9.3.2",
     "ts-node": "^9.1.1",
-    "tslib": "^2.1.0",
-    "typescript": "^4.2.2",
+    "tslib": "^2.4.0",
+    "typescript": "~4.2.4",
     "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "~5.73.0",
+    "webpack": "^4.46.0",
     "worker-loader": "^3.0.8"
   },
   "eslintConfig": {
@@ -113,7 +114,8 @@
       "no-unused-vars": "off",
       "@typescript-eslint/no-unused-vars": [
         "error"
-      ]
+      ],
+      "vue/valid-v-slot": "off"
     },
     "globals": {
       "NodeJS": true
@@ -123,5 +125,6 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "type": "commonjs"
 }
