--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "uuid": "^8.3.2",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
+    "vue-class-component": "^7.2.6",
     "vue-router": "^3.5.2",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.5.6",
